feat: creacion carpetas para la distribucion de los componentes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #B6C9BB;
     --foreground: #ededed;
   }
 }
